--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -6,9 +6,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run tests
+    - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.6
         bundler-cache: true
-    - run: bundle exec rake
+    - name: Run rubocop
+      run: bundle exec rubocop
+    - name: Run tests
+      run: bundle exec rake
